[package]
name = "diesel_connection"
version = "0.1.0"
authors = ["gregorioospina <g.ospinaa@uniandes.edu.co>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
rocket = "0.4.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
strum = "0.17.1"
strum_macros = "0.17.1"
serde_postgres = "0.1.3"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]